<resources>
    <string name="app_name">GuidanceSystem</string>
    <string name="add_room">Add a New Room</string>
    <string name="add_building">Add a New Building</string>
    <string name="title_activity_add_building">AddBuilding</string>
    <string name="title_activity_room">Room</string>
    <string name="building_name">Building Name</string>
    <string name="add_new_building">Add New Building</string>
    <string name="add_rooms">Add Rooms</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="menu_logout">Logout</string>
    <string name="ok">ok</string>
    <string name="title_activity_destination_menu">DestinationMenu</string>
    <string name="title_activity_stats">Stats</string>
    <string name="view_stats">View Stats</string>
    <string name="title_activity_room_graph">RoomGraph</string>
    <string name="view_room_stats">View Room Stats</string>
    <string name="title_activity_list_users">ListUsers</string>
    <string name="room">Room</string>
    <string name="legend">Legend</string>
</resources>
