<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.Login">

    <android.support.design.widget.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                 android:layout_height="match_parent">


        <EditText
                android:id="@+id/email"
                android:layout_width="237dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="108dp"
                android:layout_marginEnd="36dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/textView"
                android:layout_width="72dp"
                android:layout_height="23dp"
                android:layout_marginStart="16dp"
                android:text="@string/email"
                android:textAlignment="textEnd"
                app:layout_constraintBaseline_toBaselineOf="@+id/email"
                app:layout_constraintStart_toStartOf="parent" />

        <EditText
                android:id="@+id/password"
                android:layout_width="239dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/email"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/email"
                app:layout_constraintTop_toBottomOf="@+id/email"
                app:layout_constraintVertical_bias="0.026" />

        <TextView
                android:id="@+id/textView2"
                android:layout_width="70dp"
                android:layout_height="29dp"
                android:text="@string/password"
                android:textAlignment="textEnd"
                app:layout_constraintBaseline_toBaselineOf="@+id/password"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/textView" />


        <Button
                android:id="@+id/logIn"
                android:layout_width="169dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/log_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/password"
                app:layout_constraintVertical_bias="1.0" android:onClick="logIn"/>
    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>